<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.agora.vlive.ui.main.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_rooms"
        android:name="io.agora.vlive.ui.main.fragments.RoomFragment"
        android:label="@string/title_rooms"
        tools:layout="@layout/fragment_room" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="io.agora.vlive.ui.main.fragments.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
</navigation>