<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/home_category_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/home_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_title_height"
                android:layout_alignParentTop="true"
                android:textAlignment="gravity"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_large"/>
            <RelativeLayout
                android:id="@+id/home_category_multi_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_title">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/home_category_multi_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_category_multi"
                    android:scaleType="fitCenter"/>
                <RelativeLayout
                    android:layout_width="@dimen/home_category_title_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/text_content_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/home_category_title_multi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_category_title_multi"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_large"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_category_title_multi"
                        android:layout_marginTop="@dimen/text_line_padding"
                        android:text="@string/home_category_desp_multi"
                        android:textColor="@android:color/white"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/home_category_single_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_category_multi_layout">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/home_category_single_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_category_single"
                    android:scaleType="fitCenter"/>
                <RelativeLayout
                    android:layout_width="@dimen/home_category_title_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/text_content_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/home_category_title_single"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_category_title_single"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_large"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_category_title_single"
                        android:layout_marginTop="@dimen/text_line_padding"
                        android:text="@string/home_category_desp_single"
                        android:textColor="@android:color/white"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/home_category_pk_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_category_single_layout">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/home_category_pk_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_category_pk"
                    android:scaleType="fitCenter"/>
                <RelativeLayout
                    android:layout_width="@dimen/home_category_title_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/text_content_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/home_category_title_pk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_category_title_pk"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_large"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_category_title_pk"
                        android:layout_marginTop="@dimen/text_line_padding"
                        android:text="@string/home_category_desp_pk"
                        android:textColor="@android:color/white"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/home_category_virtual_host_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_category_pk_layout">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/home_category_virtual_host_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_category_virtual_host"
                    android:scaleType="fitCenter"/>
                <RelativeLayout
                    android:layout_width="@dimen/home_category_title_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/text_content_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/home_category_title_virtual_host"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_category_title_virtual_host"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_large"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_category_title_virtual_host"
                        android:layout_marginTop="@dimen/text_line_padding"
                        android:text="@string/home_category_desp_virtual_host"
                        android:textColor="@android:color/white"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/home_category_ecommerce_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_category_virtual_host_layout">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/home_category_ecommerce_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_category_ecommerce"
                    android:scaleType="fitCenter"/>
                <RelativeLayout
                    android:layout_width="@dimen/home_category_title_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/text_content_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/home_category_title_eshop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_category_title_ecommerce"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_large"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_category_title_eshop"
                        android:layout_marginTop="@dimen/text_line_padding"
                        android:text="@string/home_category_desp_ecommerce"
                        android:textColor="@android:color/white"/>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

