<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/modify_user_name_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modify_user_name_title_height">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/modify_user_name_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:textColor="@color/gray_darkest"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/dialog_negative_button"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/modify_user_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/gray_darkest"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/modify_user_title"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/modify_user_name_confirm_btn"
            android:layout_width="@dimen/modify_user_name_done_btn_width"
            android:layout_height="@dimen/modify_user_name_done_btn_height"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/button_text_done"
            android:background="@drawable/modify_user_name_done_btn_color"/>
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/modify_user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modify_user_name_title_height"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:textAlignment="gravity"
        android:gravity="center_vertical"
        android:textColor="@color/gray_darkest"
        android:textSize="@dimen/text_size_medium"
        android:background="@drawable/color_rect_gray_lightest"/>
</LinearLayout>
