<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/round_top_corner_white_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_room_action_sheet_text_item_height"
        android:paddingStart="@dimen/live_room_action_sheet_margin"
        android:paddingEnd="@dimen/live_room_action_sheet_margin">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/live_room_action_sheet_text_item_height"
            android:textAlignment="gravity"
            android:gravity="center"
            android:text="@string/live_room_voice_action_sheet_title"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/gray_darkest"/>
        <View
            android:id="@+id/voice_switch"
            android:layout_width="@dimen/switch_width"
            android:layout_height="@dimen/switch_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/switch_background"/>

        <View
            android:id="@+id/live_room_voice_back"
            android:layout_width="@dimen/live_room_action_arrow_size"
            android:layout_height="@dimen/live_room_action_arrow_size"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_back_gray"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_room_action_sheet_item_divider_height"
        android:layout_marginStart="@dimen/live_room_action_sheet_margin"
        android:layout_marginEnd="@dimen/live_room_action_sheet_margin"
        android:background="@color/gray_lightest"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/live_room_action_sheet_margin"
        android:layout_marginEnd="@dimen/live_room_action_sheet_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/live_room_action_sheet_text_margin">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/voice_headphone"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/voice_loudspeaker"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/live_room_voice_action_sheet_headphone"
            style="@style/voice_action_sheet_button"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/voice_loudspeaker"
            app:layout_constraintStart_toEndOf="@id/voice_headphone"
            app:layout_constraintEnd_toStartOf="@id/voice_others"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/live_room_voice_action_sheet_loudspeaker"
            style="@style/voice_action_sheet_button"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/voice_others"
            app:layout_constraintStart_toEndOf="@id/voice_loudspeaker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/live_room_voice_action_sheet_others"
            style="@style/voice_action_sheet_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
