<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/activity_disclaimer_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_activity_title_height">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="gravity"
            android:gravity="center"
            android:text="@string/disclaimer_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_large"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/disclaimer_activity_close"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:src="@drawable/icon_back_black"/>
    </RelativeLayout>
    <View
        android:id="@+id/disclaimer_title_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_divider_height"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_below="@id/activity_disclaimer_title_layout"
        android:background="@color/gray_lightest"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAlignment="gravity"
        android:gravity="center"
        android:text="@string/official_website"
        android:textColor="@color/gray_light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/disclaimer_title_divider"
        android:layout_above="@id/logo">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/disclaimer_content"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>